# cri-benchmark

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  METHODOLOGY.md  README.md  init.sh  pyproject.toml  run.ps1  run.sh
.github/workflows/: ci.yml  publish.yml
datasets/: README.md
datasets/canonical/persona-1-base/: conversations.jsonl  ground_truth.json  metadata.json
datasets/canonical/persona-1-basic/: conversations.jsonl  events.json  ground_truth.json  metadata.json  persona.json  queries.json
datasets/canonical/persona-2-intermediate/: conversations.jsonl  events.json  ground_truth.json  metadata.json  persona.json  queries.json
datasets/canonical/persona-3-advanced/: conversations.jsonl  events.json  ground_truth.json  metadata.json  persona.json  queries.json
docs/: README.md  proposed-new-metrics.md  vision.md
docs/architecture/: adapter-interface.md  data-flow.md  overview.md  scoring-engine.md
docs/concepts/: ai-memory.md  benchmark-philosophy.md  ontology-memory.md
docs/guides/: integration.md  new-datasets.md  new-metrics.md  quickstart.md  reproducibility.md
docs/methodology/: datasets.md  judge.md  overview.md
docs/methodology/metrics/: composite-cri.md  crq.md  dbu.md  mei.md  pas.md  qrp.md  sfc.md  ssi.md  tc.md
docs/metrics/: ars.md  crq.md  dbu.md  lnc.md  mei.md  pas.md  qrp.md  sfc.md  ssi.md  tc.md
docs/research/: ama-bench-analysis.md  contextually-sdk-analysis.md  literature-review.md  ontology-as-memory-analysis.md  upp-protocol-analysis.md
examples/: README.md
examples/adapters/: full_context_adapter.py  no_memory_adapter.py  rag_adapter.py  upp_adapter.py
scripts/: generate_canonical_datasets.py
src/cri/: __init__.py  adapter.py  judge.py  models.py  performance.py  reporter.py  runner.py
src/cri/datasets/: __init__.py  generator.py  loader.py
src/cri/datasets/persona-1-base/: metadata.json
src/cri/datasets/personas/: __init__.py  specs.py
src/cri/scoring/: __init__.py  engine.py  rubrics.py  ssi.py
src/cri/scoring/dimensions/: __init__.py  ars.py  base.py  crq.py  dbu.py  lnc.py  mei.py  pas.py  qrp.py  sfc.py  tc.py
src/cri/utils/: llm_anthropic_subscription.py  llm_cache.py
tests/: conftest.py  test_adapter.py  test_baseline_adapters.py  test_binary_judge.py  test_dataset_generator.py  test_dataset_loader.py  test_dimension_base.py  test_integration.py  test_judge.py  test_models.py  test_performance.py  test_reporter.py  test_rubrics.py  test_runner.py  test_scoring_engine.py  test_ssi.py  test_upp_adapter.py
tests/test_dimensions/: test_ars.py  test_crq.py  test_dbu.py  test_lnc.py  test_mei.py  test_pas.py  test_qrp.py  test_sfc.py  test_tc.py
