[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cri-benchmark"
version = "0.1.0"
description = "CRI Benchmark — Contextual Resonance Index: An open-source benchmark for evaluating AI long-term memory systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CRI Benchmark Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "litellm>=1.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4",
]
upp = [
    "upp-python>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pytest-cov",
]

[project.scripts]
cri = "cri.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
